feat: Improve threading