@@ -9,18 +9,18 @@ import java.util.concurrent.Executors;
 
 @EnableAsync
 @Configuration
-public class AsyncConfiguration {
+public class ExecutorsConfiguration {
 
     public static final String BACKGROUND_TASKS_EXECUTOR_NAME = "backgroundTasksExecutor";
     public static final String NOTIFICATION_LISTENER_EXECUTOR_NAME = "notificationListenerExecutor";
 
     @Bean(BACKGROUND_TASKS_EXECUTOR_NAME)
-    public Executor eventListenerExecutor() {
-        return Executors.newVirtualThreadPerTaskExecutor();
+    public Executor backgroundTasksExecutor() {
+        return Executors.newFixedThreadPool(5, Thread.ofVirtual().name("background-tasks-executor", 1).factory());
     }
 
     @Bean(NOTIFICATION_LISTENER_EXECUTOR_NAME)
     public Executor notificationListenerExecutor() {
-        return Executors.newSingleThreadExecutor(Thread.ofVirtual().factory());
+        return Executors.newSingleThreadExecutor(Thread.ofVirtual().name("notifications-executor").factory());
     }
 }
